spacing corrections user-settings

--- a/frontend-new/src/styles/components/_modal.scss
+++ b/frontend-new/src/styles/components/_modal.scss
@@ -35,6 +35,6 @@
             box-shadow: 0px 0px 8px rgba($fa-color--mono-1,1);
         }
         .fa-modal--header+.fa-container{
-            margin-top: 90px;
+            margin-top: 75px;
         }
 }
